[package]
name = "vokselis"
version = "0.1.0"
edition = "2021"
authors = ["Alex Komissarov <k.a.komissar@gmail.com>"]
license = "MIT"
description = "Voxels with Rust and wgpu."
repository = "https://github.com/pudnax/vokselis/"
readme = "README.md"
keywords = ["graphics", "voxels", "wgpu", "shaders", "creative"]
exclude = [".gitignore", "examples", ".github"]
categories = ["graphics", "rendering"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.1"
pollster = "0.2.5"
winit = "0.26.1"
bytemuck = { version = "1.7.3", features = ["derive"] }
env_logger = "0.9.0"
notify = "5.0.0-pre.14"
crossbeam-channel = "0.5.4"
png = "0.17.5"
chrono = "0.4.19"
glam = { version = "0.20.5", features = ["bytemuck"] }

[dependencies.wgpu]
# git = "https://github.com/gfx-rs/wgpu"
# branch = "master"
version = "0.12.0"
features = ["spirv"]
# features = ["spirv", "vulkan-portability"]

[dependencies.naga]
git = "https://github.com/gfx-rs/naga"
branch = "master"
features = ["span", "spv-out", "wgsl-in"]

# [[example]]
# name = "bonsai"
# path = "examples/bonsai/src/main.rs"
